--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "nav",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-  "build": "webpack --config webpack.config.js",
-  "dev": "webpack --config webpack.config.js --mode development"
-},
+    "build": "webpack --config webpack.config.mjs",
+    "dev": "webpack --config webpack.config.mjs --mode development"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.99.9",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-shell-plugin-next": "^2.3.2"
   }
 }
