--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-shell-plugin-next": "^2.3.2"
+  },
+  "dependencies": {
+    "xlsx": "^0.18.5"
   }
 }
