xlsx: dev & prod paths resolved

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "build": "webpack --config webpack.config.mjs",
-    "dev": "webpack --config webpack.config.mjs --mode development"
+ "scripts": {
+    "build": "NODE_ENV=production webpack --config webpack.config.mjs",
+    "dev": "NODE_ENV=development webpack --config webpack.config.mjs --watch"
   },
   "keywords": [],
   "author": "",
