templates: to html

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "html-loader": "^5.1.0",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-shell-plugin-next": "^2.3.2"
