--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "webpack-shell-plugin-next": "^2.3.2"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   }
 }
